tests/language_modules/15_qualified_names_calls/valid/qualified_call_arguments.vf
module Qualified.Arguments

function sum(left: Integer, right: Integer) returns Integer
is
    return left + right
end sum

procedure main()
is
    let total: Integer = Qualified.Arguments.sum(1, 2)
    check total = 3
end main

end Qualified.Arguments