tests/language_modules/15_qualified_names_calls/invalid_semantics/qualified_call_argument_count.vf
module Qualified.ArgumentCount

function sum(left: Integer, right: Integer) returns Integer
is
    return left + right
end sum

procedure main()
is
    let total: Integer = Qualified.ArgumentCount.sum(1)
    check total = 1
end main

end Qualified.ArgumentCount